--- a/NamedPipeWrapper.NetCore/NamedPipeWrapper.NetCore.csproj
+++ b/NamedPipeWrapper.NetCore/NamedPipeWrapper.NetCore.csproj
@@ -2,18 +2,33 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0</TargetFrameworks>
-    <TargetFrameworks Condition=" '$(OS)' == 'Windows_NT' ">$(TargetFrameworks);net452;net461</TargetFrameworks>
+    <TargetFrameworks Condition=" '$(OS)' == 'Windows_NT' ">$(TargetFrameworks);net471</TargetFrameworks>
     <!--<TargetFrameworks Condition=" '$(OS)' == 'Windows_NT' AND '$(MSBuildRuntimeType)' != 'Core'">$(TargetFrameworks);uap10.0</TargetFrameworks>-->
     <Product />
     <Company />
-    <Authors />
+    <Authors>LarryMai</Authors>
     <PackageId>NamedPipeWrapper.NetCore</PackageId>
     <AssemblyName>NamedPipeWrapper.NetCore</AssemblyName>
     <RootNamespace>NamedPipeWrapper</RootNamespace>
-    <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <AssemblyVersion>0.0.1.0</AssemblyVersion>
-    <FileVersion>0.0.0.0</FileVersion>
+    <FileVersion>0.0.1.0</FileVersion>
     <PackageReleaseNotes>Init version</PackageReleaseNotes>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <Copyright>Copyright 2019</Copyright>
+    <PackageProjectUrl>https://github.com/LarryMai/named-pipe-wrapper</PackageProjectUrl>
+    <PackageTags>IPC, Named, Messages, Pipe.</PackageTags>
+    <Description>Create named pipe servers that can handle multiple client connections simultaneously.
+
+Send strongly-typed messages between clients and servers: any serializable .NET object can be sent over a pipe and will be automatically serialized/deserialized, including cyclical references and complex object graphs.
+
+Messages are sent and received asynchronously on a separate background thread and marshalled back to the calling thread (typically the UI).
+
+Supports large messages - up to 300 MiB.
+
+Requires .NET 4.0 full.
+
+The package was forked from NamedPipeWrapper 1.4.0 creadted by Andrew C. Dvorak and the original project url is https://github.com/acdvorak/named-pipe-wrapper.</Description>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(TargetFramework)' == 'uap10.0'">
@@ -28,6 +43,29 @@
     <DefaultLanguage>en</DefaultLanguage>
     <LanguageTargets>$(MSBuildExtensionsPath)\Microsoft\WindowsXaml\v$(VisualStudioVersion)\Microsoft.Windows.UI.Xaml.CSharp.targets</LanguageTargets>
   </PropertyGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+    <PackageReference Include="System.IO.Pipes">
+      <Version>4.3.0</Version>
+    </PackageReference>
+    <PackageReference Include="System.IO.Pipes.AccessControl">
+      <Version>4.5.1</Version>
+    </PackageReference>
+    <PackageReference Include="System.Security.AccessControl">
+      <Version>4.5.0</Version>
+    </PackageReference>
+  </ItemGroup>
+
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'net471'">
+    <PackageReference Include="System.IO.Pipes">
+      <Version>4.3.0</Version>
+    </PackageReference>
+    <PackageReference Include="System.IO.Pipes.AccessControl">
+      <Version>4.5.1</Version>
+    </PackageReference>
+
+  </ItemGroup>
 
  
 </Project>
